--- a/AquIIBooII_orbits.ipynb
+++ b/AquIIBooII_orbits.ipynb
@@ -197,7 +197,7 @@
    "outputs": [],
    "source": [
     "mass_lmc=1.38e11 #solar masses\n",
-    "rscale_lmc=10.2 #kpc\n",
+    "rscale_lmc=8.7 #kpc\n",
     "\n",
     "pot = McMillan17\n",
     "\n",
@@ -210,7 +210,7 @@
     "o_lmc.integrate(ts,pot+cdf)\n",
     "\n",
     "#Setup a moving Hernquist potential to represent the LMC\n",
-    "lmcpot = HernquistPotential(amp=2*10.**11.*units.Msun, a=5.*units.kpc/(1.+np.sqrt(2.))) #rhm = (1+sqrt(2)) a\n",
+    "lmcpot = HernquistPotential(amp=2*mass_lmc*units.Msun, a=5.*units.kpc/(1.+np.sqrt(2.))) #rhm = (1+sqrt(2)) a\n",
     "moving_lmcpot = MovingObjectPotential(o_lmc, pot=lmcpot)\n",
     "#Add the moving Hernquest potential to the MW\n",
     "total_pot = [pot]\n",
